--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="EkoSpoj"/>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>EkoSpoj</title>
 </head>
 <body>
